[gd_scene load_steps=7 format=3 uid="uid://6bkthesgluny"]

[ext_resource type="Script" path="res://scripts/gun_bullet.gd" id="1_5fg3g"]
[ext_resource type="Texture2D" uid="uid://cf0rbi2pcetwa" path="res://assets/base assets/gun_bullet.png" id="2_qvqdn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uwnrf"]
atlas = ExtResource("2_qvqdn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gwgw"]
atlas = ExtResource("2_qvqdn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_234v0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwnrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gwgw")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_iuwj5"]
radius = 5.0

[node name="Gun Bullet" type="Node2D"]
script = ExtResource("1_5fg3g")

[node name="AttackBoxArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AttackBoxArea2D"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_234v0")
autoplay = "default"
frame_progress = 0.932179

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBoxArea2D"]
shape = SubResource("CircleShape2D_iuwj5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="AttackBoxArea2D"]
position = Vector2(1.19209e-07, 2.08616e-07)
scale = Vector2(0.4, 0.4)

[connection signal="area_entered" from="AttackBoxArea2D" to="." method="_on_attack_box_area_2d_area_entered"]
[connection signal="body_entered" from="AttackBoxArea2D" to="." method="_on_attack_box_area_2d_body_entered"]
[connection signal="screen_exited" from="AttackBoxArea2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
